[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Node.tscn" type="PackedScene" id=3]
[ext_resource path="res://art/floor.png" type="Texture" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 16, 0, 0, 0, 0, 0, 464, 0 )
}

[sub_resource type="InputEventAction" id=2]
action = "ui_select"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 240, 56 )

[node name="Main" type="Node"]
script = ExtResource( 1 )
Node = ExtResource( 3 )

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 584 )

[node name="NodePath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="NodeSpawnLocation" type="PathFollow2D" parent="NodePath"]
position = Vector2( 16, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.5
margin_top = -25.0
margin_right = 52.5
margin_bottom = 25.0
shortcut = SubResource( 3 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 392.0
margin_top = 16.0
margin_right = 432.0
margin_bottom = 30.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MissedLabel" type="Label" parent="."]
margin_left = 392.0
margin_top = 40.0
margin_right = 432.0
margin_bottom = 54.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NodeTimer" type="Timer" parent="."]

[node name="Floor" type="Area2D" parent="."]

[node name="FloorSprite" type="Sprite" parent="Floor"]
position = Vector2( 0, 600 )
texture = ExtResource( 4 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 240, 656 )
shape = SubResource( 4 )
[connection signal="node_caught" from="Player" to="." method="_on_Player_node_caught"]
[connection signal="pressed" from="StartButton" to="." method="_on_Start_pressed"]
[connection signal="timeout" from="NodeTimer" to="." method="_on_NodeTimer_timeout"]
[connection signal="body_entered" from="Floor" to="." method="_on_Floor_body_entered"]
